--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,9 +13,9 @@ jobs:
       - name: clone local repository
         uses: actions/checkout@v2
       - name: install dependency
-        run: npm install
+        run: yarn
       - name: build
-        run: npm build
+        run: yarn run build
       - name: deploy serverless
         uses: woodyyan/tencent-serverless-action@main
         env: # 环境变量
