--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,6 +12,12 @@ jobs:
     steps:
       - name: clone local repository
         uses: actions/checkout@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18.15.0
+      - name: Set up npm mirror
+        run: npm config set registry https://registry.npm.taobao.org
       - name: install dependency
         run: yarn
       - name: build
